--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
  "compilerOptions": {
      "baseUrl": "./",
-     "outDir": "dist",
+     "outDir": "build",
      "rootDir": "src",
      "lib": ["es2017", "dom"],
      "sourceMap": true,
+     "declaration": true,
      "allowSyntheticDefaultImports": true,
      "typeRoots": ["node_modules/@types"],
      "moduleResolution": "node",
