add calendar-algorithm and rebuild

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algorithm",
-  "version": "1.0.0",
-  "description": "1.冒泡算法 2.快速排序 3.插入排序,4数组去重,5.质数判定,6.生成随机数",
+  "version": "3.0.0",
+  "description": "1.冒泡算法 2.快速排序 3.插入排序,4数组去重,5.质数判定,6.日历算法,7.生成随机数",
   "main": "src/index.ts",
   "dependencies": {},
   "devDependencies": {
