--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "algorithm",
-  "version": "7.0.0",
+  "version": "9.0.0",
   "description": "1.冒泡算法 2.快速排序 3.插入排序,4数组去重,5.质数判定,6.日历算法,7.颜色轮训算法,8.类的多重继承 9.生成随机数",
   "main": "src/index.ts",
   "dependencies": {},
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "https://github.com/yanyunchangfeng/algorithm.git"
   },
-  "keywords": [],
+  "keywords": ["yycf","algorithm"],
   "author": "yanyunchangfeng <yanyunchangfeng@gmail.com> (https://github.com/yanyunchangfeng)",
   "license": "MIT"
 }
