--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
  "compilerOptions": {
      "baseUrl": "./",
      "outDir": "./algorithm",
-     "rootDir": "src",
+     "rootDir": "src/app",
      "lib": ["es2017", "dom"],
      "sourceMap": true,
      "declaration": true,
