--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yycf-algorithm",
-  "version": "9.0.0",
+  "name": "algorithm",
+  "version": "9.2.0",
   "description": "1.冒泡算法 2.快速排序 3.插入排序,4数组去重,5.质数判定,6.日历算法,7.颜色轮训算法,8.类的多重继承 9.生成随机数",
-  "main": "algorithm/index.js",
+  "main": "src/app/index.ts",
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "24.0.13",
@@ -10,6 +10,7 @@
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.0",
+    "tslint": "5.16.0",
     "typescript": "3.4.5",
     "webpack": "4.30.0",
     "webpack-cli": "3.3.2",
@@ -18,7 +19,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --env=dev ",
-    "test":"jest --config=config/jest.config.js"
+    "test": "jest --config=config/jest.config.js",
+    "lint": "tslint -p tsconfig.json",
+    "fix":"tslint --force --fix -p tsconfig.json"
   },
   "repository": {
     "type": "git",
