--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "24.0.13",
-    "clean-webpack-plugin": "2.0.2",
-    "cypress": "^3.3.1",
+    "clean-webpack-plugin": "3.0.0",
+    "cypress": "3.3.1",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.8.0",
     "mini-css-extract-plugin": "0.7.0",
