--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "algorithm",
-  "version": "9.8.0",
+  "name": "yycf-algorithm",
+  "version": "9.8.1",
   "description": "1.冒泡算法 2.快速排序 3.插入排序,4数组去重,5.质数判定,6.日历算法,7.颜色轮训算法,8.类的多重继承 9.生成随机数",
   "main": "./algorithm/index.js",
   "types": "./algorithm/index.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "24.0.13",
+    "autoprefixer": "9.6.0",
     "clean-webpack-plugin": "3.0.0",
+    "css-loader": "3.0.0",
     "cypress": "3.3.1",
+    "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.8.0",
     "mini-css-extract-plugin": "0.7.0",
+    "node-sass": "4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "1.3.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.0",
