--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
  "compilerOptions": {
-     "baseUrl": "./",
-     "outDir": "./algorithm",
+     "baseUrl": "dist",
+     "outDir": "dist",
      "rootDir": "src/app",
      "lib": ["es2017", "dom"],
-     "sourceMap": true,
+     "sourceMap": false,
      "declaration": true,
      "allowSyntheticDefaultImports": true,
      "typeRoots": ["node_modules/@types"],
