--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,30 @@
 {
- "compilerOptions": {
-     "baseUrl": "dist",
-     "outDir": "dist",
-     "rootDir": "src/app",
-     "lib": ["es2017", "dom"],
-     "sourceMap": false,
-     "declaration": true,
-     "allowSyntheticDefaultImports": true,
-     "typeRoots": ["node_modules/@types"],
-     "moduleResolution": "node",
-     "noImplicitAny": true,
-     "target": "es5"
- },
- "include": ["./src/**/*/"]
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "module": "esnext",
+    "strict": true,
+    "target": "es2020",
+    "strictFunctionTypes": true,
+    "sourceMap": true,
+    "jsx": "react",
+    "lib": [
+      "ESNext",
+      "DOM" //console方法内置于DOM
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"],
+      "*": ["src/types/*"]
+    },
+    "preserveConstEnums": true, // 编译结果保留const定义的常量枚举 默认关闭
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
+  "include": [
+    "src/**/*", // 两个*表示任意目录 一个*表示任意文件
+    "src/typings/**/*"
+  ]
 }
