--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,8 @@
     "declaration": true,
     "jsx": "react",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "allowUmdGlobalAccess": true
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.ts"]
