--- a/package.json
+++ b/package.json
@@ -17,12 +17,6 @@
       "node": "./dist/cjs/index.js",
       "require": "./dist/cjs/index.js",
       "default": "./dist/esm/index.js"
-    },
-    "./bubble-sort": {
-      "types": "./dist/types/bubble-sort/index.d.ts",
-      "node": "./dist/cjs/bubble-sort/index.js",
-      "require": "./dist/cjs/bubble-sort/index.js",
-      "default": "./dist/esm/bubble-sort/index.js"
     }
   },
   "scripts": {
@@ -41,18 +35,20 @@
     "build-css": "sass ./src/index.scss ./dist/index.css",
     "build": "npm run clean && npm run build-ts",
     "build-ts": "tsc -p tsconfig.build.json",
-    "prepublishOnly": "npm run build-umd-esm-cjs",
+    "prepublishOnly": "npm run pre-commit && npm run build-umd-esm-cjs",
     "build:umd": "cross-env NODE_ENV=production UMD_LIBRARY=CfAlgorithm webpack build",
     "build:esm": "tsc -p tsconfig.build.json -m es6 --outDir dist/esm",
     "build:cjs": "tsc -p tsconfig.build.json -m commonjs --outDir dist/cjs",
-    "build-umd-esm-cjs": "npm run test && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs"
+    "build-umd-esm-cjs": "npm run test && npm run clean && npm run build:umd && npm run build:esm && npm run build:cjs",
+    "prepare": "husky install",
+    "pre-commit": "cross-env CI=true npm test"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
     "@types/jest": "29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "20.3.1",
     "@types/webpack-env": "1.16.3",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
@@ -63,6 +59,7 @@
     "html-loader": "4.1.0",
     "html-minimizer-webpack-plugin": "4.1.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.3",
     "jest": "29.5.0",
     "mini-css-extract-plugin": "2.6.0",
     "sass": "1.49.11",
